fix($stylesheet): Center align instructor profile images

--- a/src/styles/_section_instructor.scss
+++ b/src/styles/_section_instructor.scss
@@ -47,6 +47,7 @@
 
   header {
     margin: 0 0 $gutter-width;
+    text-align: center;
   }
 }
 
